enhance: move buttons to separate module & fix wrong colors (#69)

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -21,7 +21,7 @@ aside {
   max-width: 38.5rem;
   padding: 4rem 4rem 2rem;
   overflow: scroll;
-  background-color: var(--background-primary);
+  background-color: var(--background-quaternary);
   border-top-right-radius: 1.25rem;
   border-bottom-right-radius: 1.25rem;
   transform: translateX(-100%);
